Tweaked nav menu
Colours for mobile version. Hard-coded removal for desktop

--- a/.overrides/blog-home.html
+++ b/.overrides/blog-home.html
@@ -8,6 +8,7 @@
         {% set hidden = "hidden" if "navigation" in page.meta.hide %}
       {% endif %}
       <div class="md-sidebar__inner">
+        {% include "partials/nav.html" %}
       </div>
   </div>
 </div>
