--- a/overrides/blog-home.html
+++ b/overrides/blog-home.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
+{% block extrahead %}
+<link rel="alternate" type="application/rss+xml" title="RSS: XML Feed"
+  href="{{ config.site_url }}feed/feed.rss" />
+/>
+{% endblock %}
+
+
 {% block site_nav %}
 <div class="md-sidebar md-sidebar--primary" data-md-component="sidebar" data-md-type="navigation" {{ hidden }}>
   <div class="md-sidebar__scrollwrap">
