--- a/overrides/blog-post.html
+++ b/overrides/blog-post.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block extrahead %}
+<link rel="alternate" type="application/rss+xml" title="RSS: XML Feed"
+  href="{{ config.site_url }}feed/feed.rss" />
+/>
+{% endblock %}
 
 
 {% block hero %}
