--- a/overrides/blog-post.html
+++ b/overrides/blog-post.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block extrahead %}
-<link rel="alternate" type="application/rss+xml" title="RSS: XML Feed"
+<link rel="alternate" type="application/rss+xml" title="Some assemblage required &raquo; Feed"
   href="{{ config.site_url }}feed/feed.rss" />
 />
 {% endblock %}
